--- a/2.0Living Culture/index.html
+++ b/2.0Living Culture/index.html
@@ -33,6 +33,9 @@
                     Welcome at Living Culture<br>
                     Join us Thursdays @19:00, @LCF<br>
                 </a>
+                <button>
+                    <a is="QButton" href="question.html" onclick="Question()">Ask your Question</a>
+                </button>
             </div>
         </div>
         <div class="box1">
